--- a/fjordur_GameUserSettings.ini
+++ b/fjordur_GameUserSettings.ini
@@ -1,5 +1,5 @@
 [SessionSettings]
-SessionName=For Your Door
+SessionName=PompeiiOnYourAye
 
 [ServerSettings]
 AutoSavePeriodMinutes=15
@@ -65,7 +65,7 @@ NonPermanentDiseases=false
 PreventSpawnAnimations=false
 TribeNameChangeCooldown=15
 PreventTribeAlliances=false
-TamingSpeedMultiplier=2.5
+TamingSpeedMultiplier=10
 AllowAnyoneBabyImprintCuddle=true
 DisableImprintDinoBuff=false
 PreventMateBoost=false
