--- a/fjordur_GameUserSettings.ini
+++ b/fjordur_GameUserSettings.ini
@@ -2,6 +2,11 @@
 SessionName=PompeiiOnYourA
 
 [ServerSettings]
+ServerAdminPassword=Aliens1Humans0
+ServerCrosshair=False
+ServerForceNoHUD=False
+ServerHardcore=False
+ServerPassword=Aliens1Humans0
 AutoSavePeriodMinutes=15
 AllowSharedConnections=True
 KickIdlePlayersPeriod=2400
