--- a/fjordur_Game.ini
+++ b/fjordur_Game.ini
@@ -87,6 +87,82 @@ bPassiveDefensesDamageRiderlessDinos=false
 bFlyerPlatformAllowUnalignedDinoBasing=false
 PGMapName=YourPGARK1
 PGTerrainPropertiesString=MapSeed=412;LandscapeRadius=1.2;Water Frequency=11;Mountains Frequency=11;Mountains Slope=1.4;MountainsHeight=1.3;Turbulence Power=0.0125;Shore Slope=1;WaterLevel=-0.72;GrassDensity=1;JungleGrassDensity=0.02;ErosionIterations=200000;OceanFloorLevel=-1;SnowBiomeSize=0.3;RWBiomeSize=0.11;MountainBiomeStart=-0.55;MountainsTreeDensity=0.01;JungleBiomeStart=-0.65;IslandBorderCurveExp=4;MaxSawnPointHeight=0.1;SnowGrassDensity=0.25;MountainGrassDensity=0.05;SnowMountainGrassDensity=0.15;UnderwaterObjectsDensity=0.5;SnowMountainsTreeDensity=0.01;TreeDensity=0.003;JungleTreeDensity=0.66;RedWoodTreeDensity=0.35;SnowTreeDensity=1;RedwoodGrassDensity=0.1;ShoreTreeDensity=0.05;SnowShoreTreeDensity=0.025;DeepWaterBiomesDepth=-0.24;InlandWaterObjectsDensity=0.5;ShorelineStartOffset=0.04;ShorelineThickness=0.0045;TerrainScaleMultiplier=(X=1.0f,Y=1.0f,Z=1.0f);SnowBiomeLocation=(X=0.2f,Y=0.2f);RWForestBiomeLocation=(X=0.5f,Y=0.5f);NorthRegion1Start=(X=0.25f,Y=0.0f);NorthRegion1End=(X=0.416f,Y=0.5f);NorthRegion2Start=(X=0.416f,Y=0.0f);NorthRegion2End=(X=0.582f,Y=0.5f);NorthRegion3Start=(X=0.582f,Y=0.0f);NorthRegion3End=(X=0.75f,Y=0.0f);SouthRegion1Start=(X=0.25f,Y=0.5f);SouthRegion1End=(X=0.416f,Y=1.0f);SouthRegion2Start=(X=0.416f,Y=0.5f);SouthRegion2End=(X=0.582f,Y=1.0f);SouthRegion3Start=(X=0.582f,Y=0.5f);SouthRegion3End=(X=0.75f,Y=1.0f);EastRegion1Start=(X=0.75f,Y=0.0f);EastRegion1End=(X=1.0f,Y=0.333f);EastRegion2Start=(X=0.75f,Y=0.333f);EastRegion2End=(X=1.0f,Y=0.666f);EastRegion3Start=(X=0.75f,Y=0.666f);EastRegion3End=(X=1.0f,Y=1.0f);WestRegion1Start=(X=0.0f,Y=0.0f);WestRegion1End=(X=0.25f,Y=0.333f);WestRegion2Start=(X=0.0f,Y=0.333f);WestRegion2End=(X=0.25f,Y=0.666f);WestRegion3Start=(X=0.0f,Y=0.666f);WestRegion3End=(X=0.25f,Y=1.0f)
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawMeat_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_SpoiledMeat_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CookedMeat_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CookedPrimeMeat_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CookedMeat_Jerky_C",Quantity=(MaxItemQuantity=200.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CookedPrimeMeat_Jerky_C",Quantity=(MaxItemQuantity=200.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawMeat_Fish_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CookedMeat_Fish_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_Fish_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CookedPrimeMeat_Fish_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawMutton_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CookedLambChop_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_WyvernMilk_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Berry_Amarberry_C",Quantity=(MaxItemQuantity=1000.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Berry_Azulberry_C",Quantity=(MaxItemQuantity=1000.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Berry_Mejoberry_C",Quantity=(MaxItemQuantity=1000.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Berry_Narcoberry_C",Quantity=(MaxItemQuantity=1000.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Berry_Stimberry_C",Quantity=(MaxItemQuantity=1000.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Berry_Tintoberry_C",Quantity=(MaxItemQuantity=1000.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CactusSap_C",Quantity=(MaxItemQuantity=1000.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Veggie_Citronal_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Veggie_Longrass_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Veggie_Rockarrot_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Veggie_Savoroot_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemResource_CommonMushroom_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Mushroom_Aquatic_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Mushroom_Ascerbic_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Mushroom_Auric_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Soup_MushroomSoup_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemResource_Beer_C",Quantity=(MaxItemQuantity=12.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_BeerJar_C",Quantity=(MaxItemQuantity=12.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_BugRepellant_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CactusBuffSoup_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Soup_CalienSoup_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Soup_EnduroStew_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Soup_FocalChili_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Soup_FriaCurry_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Soup_LazarusChowder_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_CureLow_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumableRespecSoup_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Soup_ShadowSteak_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_SweetVeggieCake_C",Quantity=(MaxItemQuantity=5.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Honey_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Kibble_Base_XSmall_EX_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Kibble_Base_Small_EX_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Kibble_Base_Medium_EX_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Kibble_Base_Large_EX_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Kibble_Base_XLarge_EX_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Kibble_Base_Special_EX_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_AdvancedBullet_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_AdvancedRifleBullet_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_AdvancedSniperBullet_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_Boulder_C",Quantity=(MaxItemQuantity=50.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemC4Ammo_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_CannonBall_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_CannonShell_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_ArrowFlame_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_Flamethrower_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_GrapplingHook_C",Quantity=(MaxItemQuantity=20.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_CompoundBowArrow_C",Quantity=(MaxItemQuantity=500.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_AggroTranqDart_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_RocketHomingMissile_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_RocketPod_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_Rocket_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_RefinedTranqDart_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_SimpleBullet_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_SimpleRifleBullet_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_SimpleShotgunBullet_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_BallistaArrow_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_ArrowStone_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_ArrowTranq_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_TranqDart_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_TranqSpearBolt_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemTransGPSAmmo_C",Quantity=(MaxItemQuantity=100.0, bIgnoreMultiplier=true))
+ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemAmmo_Zipline_C",Quantity=(MaxItemQuantity=10.0, bIgnoreMultiplier=true))
 PerLevelStatsMultiplier_Player[0]=1.0
 PerLevelStatsMultiplier_Player[1]=1.0
 PerLevelStatsMultiplier_Player[2]=1.0
