--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -590,6 +590,11 @@ XLWallHP=120000
 
 [DinoStorage2]
 SoulTerminalStackSize=1000
+EnableAllGeneration=True
+EnableFertEggCollection=True
+EnableFruitSeeding=True
+EnableIncubation=True
+EnablePoopConversion=True
 
 [AwesomeSpyGlass]
 AllowGPS=True
