Enable Automation in DinoStorage

--- a/fjordur_GameUserSettings.ini
+++ b/fjordur_GameUserSettings.ini
@@ -482,17 +482,17 @@ AutomationFuelCounter=1
 AutomationItemBlacklist=
 DistributeFertilizerRange=30.0
 DistributePelletRange=30.0
-EnableAllGeneration=False
-EnableEggGeneration=False
-EnableFertEggCollection=False
-EnableFruitSeeding=False
-EnableHoneyGeneration=False
-EnableIncubation=False
-EnableMiscPoopGeneration=False
-EnablePassiveGeneration=False
-EnablePoopConversion=False
-EnablePoopGeneration=False
-EnableWoolGeneration=False
+EnableAllGeneration=True
+EnableEggGeneration=True
+EnableFertEggCollection=True
+EnableFruitSeeding=True
+EnableHoneyGeneration=True
+EnableIncubation=True
+EnableMiscPoopGeneration=True
+EnablePassiveGeneration=True
+EnablePoopConversion=True
+EnablePoopGeneration=True
+EnableWoolGeneration=True
 IncubationMultiplier=2.0
 OviBonusMultiplier=1.5
 PickUpableEggsOnly=False
